update example env file

--- a/docker/example-facebook.env
+++ b/docker/example-facebook.env
@@ -1,3 +1,4 @@
+COMPOSE_PROJECT_NAME=combinary-collector-facebook
 APP_ID=*available from app account*
 APP_SECRET=*available from app account*
 GRAPH_VERSION=v3.2
