--- a/docker/services.yml
+++ b/docker/services.yml
@@ -15,13 +15,11 @@ services:
   # DB: PostgreSQL
   pgsql:
     hostname: db
-    image: ${DB_IMAGE:-postgres:9.6-alpine}
-    ports:
-      - "${PGSQL_PORT_MAPPING:-5432}"
+    image: ${DB_IMAGE:-postgres:12-alpine}
     environment:
       - POSTGRES_DB=${POSTGRES_DB:-combinaryfbook}
       - POSTGRES_USER=${POSTGRES_USER:-user}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-user}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-1234}
 
   # CLI - Used for all console commands and tools.
   cli:
