only expose webhooks

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     labels:
       traefik.enable: "true"
       traefik.docker.network: "web"
-      traefik.frontend.rule: "Host:fb.combinary.com"
+      traefik.frontend.rule: "Host: fb.combinary.com; PathPrefix: /webhooks.php"
       traefik.frontend.headers.customResponseHeaders: "X-Robots-Tag: noindex, nofollow, noarchive"
       traefik.port: "80"
     networks:
